--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,37 @@
-name: CI
+# .github/workflows/ci.yml
+name: Python CI
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  lint-test-build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.10"
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
+    - name: Install dependencies
+      run: |
+        pip install --upgrade pip
+        pip install .[dev]  # (Anda perlu tambahkan dependensi dev di pyproject.toml)
+        # Atau cara mudah:
+        pip install .
+        pip install pylint black isort pytest
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-          pip install black isort pylint pytest
+    - name: Check formatting with Black
+      run: black --check .
 
-      - name: Code format check
-        run: |
-          black --check .
-          isort --check-only .
-          pylint bsort/
+    - name: Check imports with isort
+      run: isort --check .
 
-      - name: Run tests
-        run: |
-          pytest tests/
+    - name: Lint with Pylint
+      run: pylint src/bsort
+
+    - name: Test with Pytest
+      run: pytest tests/
+
+    - name: Build Docker image
+      run: docker build . --file Dockerfile --tag bsort-image:latest
